how to do a htttp request

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,25 +1,34 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
 <ul>
-  <li *ngFor="let user of data">{{user.name}}</li>
+  <li *ngFor="let user of data">{{user.name}} : age = {{user.age}} and email = {{user.email}}</li>
 </ul>
 
 <form [formGroup]="userForm" (ngSubmit)="formSubmit()">
   
   <label>Username</label>
+  &nbsp;
   <input type="text" formControlName="name">
   
   <div>&nbsp;</div>
 
   <label>Age</label>
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <input type="text" formControlName="age">
   
   <div>&nbsp;</div>
 
   <label>E-mail</label>
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <input type="text" formControlName="email">
   
   <div>&nbsp;</div>
 
   <input type="submit" value="Submit">
 </form>
+
+<ul>
+  <li *ngFor="let user of remoteData">
+    {{user.name}}
+  </li>
+</ul>
